test/Parse/string_literal_eof4.code
// RUN: %target-typecheck-verify-language

// NOTE: DO NOT add a newline at EOF.
// expected-error@+1 {{unterminated string literal}}
_ = """
    foo